monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0144/A0144bb.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0144;

grammar A0144bb extends A0144b {

  // While "Foo" is now defined twice, it is valid due to beeing overriden
  @Override
  Foo = "betterfoo";

}
